current/k8s/talk-hpb/talk-hpb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-talk-hpb
  namespace: nextcloud
spec:
  selector:
    app: nextcloud-talk-hpb
  ports:
    - name: http
      port: 8080
      targetPort: 8081
      protocol: TCP
    - name: turn-tcp
      port: 3478
      targetPort: 3478
      protocol: TCP
    - name: turn-udp
      port: 3478
      targetPort: 3478
      protocol: UDP
  type: ClusterIP
