current/k8s/talk-hpb/turn-tcp.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-talk-turn-tcp
  namespace: nextcloud
spec:
  selector:
    app: nextcloud-talk-hpb
  ports:
    - name: turn-tcp
      port: 3478
      targetPort: 3478
      protocol: TCP
  type: LoadBalancer
