current/k8s/talk-hpb/talk-hpb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud-talk-hpb
  namespace: nextcloud
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - signaling.ewe-netz-backup.de
      secretName: signaling-tls
  rules:
    - host: signaling.ewe-netz-backup.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nextcloud-talk-hpb
                port:
                  number: 8080
